# cleanup-files

./: .travis.yml  Cargo.toml  LICENSE  README.md  release.sh  rustfmt.toml
.github/workflows/: ci.yml
src/: cli.rs  file.rs  fs_utils.rs  helper.rs  main.rs  params.rs  run.rs
src/cli/: flag.rs  mod.rs  result.rs  value.rs
src/lib/: mod.rs  resolve_directories.rs  wrap_string.rs
src/utils/: cli_utils.rs  fs.rs  fs_utils.rs  mod.rs
tests/: cli.rs  lib.rs
