[package]
name = "cleanup_files"
description = "Sorts files with same kind of extension into directories"
license = "MIT"
version = "0.0.0"
authors = ["Simon Reinisch <trash@reinisch.io>"]
edition = "2018"

[dependencies]
path-absolutize = "1.1.7"
colored = "1.9"

[[bin]]
name = "cleanup"
path = "src/main.rs"